--- a/app/index.html
+++ b/app/index.html
@@ -30,10 +30,10 @@
 
         <div class="GameCanvas">
             <div class="Player"></div>
-            <div class="Pipe Pipeupper" id="Pipe1upper"></div>
-            <div class="Pipe Pipelower" id="Pipe1lower"></div>
-            <div class="Pipe Pipeupper" id="Pipe2upper"></div>
-            <div class="Pipe Pipelower" id="Pipe2lower"></div>
+            <div class="Pipe1upper"></div>
+            <div class="Pipe1lower"></div>
+            <div class="Pipe2upper"></div>
+            <div class="Pipe2lower"></div>
             <div class="Scoreboard">
                 <button class="Scoreboard-restart">
                     <span class="Scoreboard-restartText">Restart</span>
@@ -54,7 +54,9 @@
         <script src="scripts/controls.js"></script>
         <script src="scripts/game.js"></script>
         <script src="scripts/player.js"></script>
+        <script src="scripts/pipe.js"></script>
         <script src="scripts/utils.js"></script>
+        
         <!-- endbuild -->
 </body>
 </html>
