better generator and collision detection

--- a/app/index.html
+++ b/app/index.html
@@ -30,10 +30,10 @@
 
         <div class="GameCanvas">
             <div class="Player"></div>
-            <div class="Pipe1upper"></div>
-            <div class="Pipe1lower"></div>
-            <div class="Pipe2upper"></div>
-            <div class="Pipe2lower"></div>
+            <div class="Pipe1upper" id="Pipe1upper"></div>
+            <div class="Pipe1lower" id="Pipe1lower"></div>
+            <div class="Pipe2upper" id="Pipe2upper"></div>
+            <div class="Pipe2lower" id="Pipe2lower"></div>
             <div class="Scoreboard">
                 <button class="Scoreboard-restart">
                     <span class="Scoreboard-restartText">Restart</span>
