--- a/app/index.html
+++ b/app/index.html
@@ -35,10 +35,10 @@
 
         <div class="GameCanvas">
             <div class="Player"></div>
-            <div class="Pipe1upper" id="Pipe1upper"></div>
-            <div class="Pipe1lower" id="Pipe1lower"></div>
-            <div class="Pipe2upper" id="Pipe2upper"></div>
-            <div class="Pipe2lower" id="Pipe2lower"></div>
+            <div class="Pipe1upper Pipeupper" id="Pipe1upper"></div>
+            <div class="Pipe1lower Pipelower" id="Pipe1lower"></div>
+            <div class="Pipe2upper Pipeupper" id="Pipe2upper"></div>
+            <div class="Pipe2lower Pipelower" id="Pipe2lower"></div>
             <div class="Scoreboard">
                 <button class="Scoreboard-restart">
                     <p class="scoreText">Your score:</p>
