Fancying score stuff

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
                     <span class="Scoreboard-restartText">Restart</span>
                 </button>
             </div>
-            <div class="counter">0</div>
+            <div class="counter" id="scoreCounter">0</div>
 
             <div class="Border"></div>
         </div>
