--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,10 @@
             <source src="audio/mariosuccess.mp3" type="audio/mpeg">
         </audio>
 
+        <audio class="gameOverAudio">
+            <source src="audio/crowdBoo" type="audio/mpeg">
+        </audio>
+
         <div class="GameCanvas">
             <div class="Player"></div>
             <div class="Pipe1upper Pipeupper" id="Pipe1upper"></div>
