--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,11 @@
         </audio>
 
         <audio class="gameOverAudio">
-            <source src="audio/crowdBoo" type="audio/mpeg">
+            <source src="audio/crowdBoo.mp3" type="audio/mpeg">
+        </audio>
+
+        <audio class="flapAudio">
+            <source src="audio/marioJumping.mp3" type="audio/mpeg">
         </audio>
 
         <div class="GameCanvas">
