new sound effectes

--- a/app/index.html
+++ b/app/index.html
@@ -30,11 +30,11 @@
         </audio>
 
         <audio class="successAudio">
-            <source src="audio/mariosuccess.mp3" type="audio/mpeg">
+            <source src="audio/mariosuccess.ogg" type="audio/mpeg">
         </audio>
 
         <audio class="gameOverAudio">
-            <source src="audio/crowdBoo.mp3" type="audio/mpeg">
+            <source src="audio/deathSoundEffect.mp3" type="audio/mpeg">
         </audio>
 
         <audio class="flapAudio">
