--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,11 @@
         </audio>
 
         <audio class="successAudio">
-            <source src="audio/mariosuccess.mp3" type="audio/mpeg">
+            <source src="audio/mariosuccess.ogg" type="audio/mpeg">
+        </audio>
+
+        <audio class="jumpAudio">
+            <source src="http://themushroomkingdom.net/sounds/wav/smb/smb_stomp.wav" type="audio/mpeg">
         </audio>
 
         <div class="GameCanvas">
