--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,6 @@
         <audio controls autoplay class="musicAudio">
             <source src="audio/mario.mp3" type="audio/mpeg">
         </audio>
-
         <audio class="successAudio">
             <source src="audio/mariosuccess.ogg" type="audio/mpeg">
         </audio>
@@ -38,6 +37,9 @@
         <audio class="gameOverAudio">
             <source src="audio/deathSoundEffect.mp3" type="audio/mpeg">
         </audio>
+
+        <button class="muteSong" value="true">song</button>
+        <button class="muteSoundEffects" value="true">soundeffects</button>
 
         <div class="GameCanvas">
             <div class="Player"></div>
