Background hardware accelerated

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
         </audio>
 
         <div class="GameCanvas">
+            <div class="background"></div>
             <div class="Player"></div>
             <div class="Pipe1upper Pipeupper" id="Pipe1upper"></div>
             <div class="Pipe1lower Pipelower" id="Pipe1lower"></div>
@@ -71,7 +72,7 @@
         <script src="scripts/player.js"></script>
         <script src="scripts/pipe.js"></script>
         <script src="scripts/utils.js"></script>
-        
+
         <!-- endbuild -->
 </body>
 </html>
