--- a/app/index.html
+++ b/app/index.html
@@ -38,8 +38,8 @@
             <source src="audio/deathSoundEffect.mp3" type="audio/mpeg">
         </audio>
 
-        <button class="muteSong" value="true">song</button>
-        <button class="muteSoundEffects" value="true">soundeffects</button>
+        <button class="muteSong" value="false">song</button>
+        <button class="muteSoundEffects" value="false">soundeffects</button>
 
         <div class="GameCanvas">
             <div class="Player"></div>
