top score added

--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,8 @@
                 <button class="Scoreboard-restart">
                     <p class="scoreText">Your score:</p>
                     <div class="counter">0</div>
+                    <p class="scoreText topScoreText">Top score:</p>
+                    <div class="topCounter" id="topCounter">0</div>
                     <span class="Scoreboard-restartText">Restart</span>
                 </button>
             </div>
