Styling mute buttons

--- a/app/index.html
+++ b/app/index.html
@@ -38,8 +38,6 @@
             <source src="audio/deathSoundEffect.mp3" type="audio/mpeg">
         </audio>
 
-        <button class="muteSong">song</button>
-        <button class="muteSoundEffects">soundeffects</button>
 
         <div class="GameCanvas">
             <div class="background"></div>
@@ -60,6 +58,8 @@
             <div class="counter" id="scoreCounter">0</div>
             <div class="introText" id="introText">Mouse click or spacebar to play</div>
 
+            <button class="button" id="muteSong">Music<span class="icon">&nbsp;</span></button>
+            <button class="button" id="muteSoundEffects">SFX<span class="icon">&nbsp;</span></button>
             <div class="Border"></div>
         </div>
 
